@@ -8,10 +8,10 @@
 	<type>bool</type>
 	<default>true</default>
 	<locale name="C">
-	  <short>Allow the screensaver to activate even when audio-only is playing</short>
+	  <short>Allow the screensaver to activate when playing audio</short>
 	  <long>
-	    Allow the screensaver to activate even when audio-only is playing.
-	    This is useful for monitor-powered speakers.
+	    Allow the screensaver to activate when playing audio.
+	    Disable if you have monitor-powered speakers.
 	  </long>
 	</locale>
       </schema>
