@@ -1142,7 +1142,7 @@
                 <object class="GtkCheckButton" id="tpw_screensaver_checkbutton">
                   <property name="visible">True</property>
                   <property name="can_focus">True</property>
-                  <property name="label" translatable="yes">_Allow the screensaver to activate even when audio-only is playing</property>
+                  <property name="label" translatable="yes">Also disable the screensaver when playing _audio</property>
                   <property name="use_underline">True</property>
                   <property name="relief">GTK_RELIEF_NORMAL</property>
                   <property name="focus_on_click">True</property>
